tests/linearity-regression/reject/s0902_reserved_01.pdx
// Simple let shadow: a linear binding is shadowed without being consumed.
module M = structure {
  let f : (linear int) -> unit = fn (x : linear int) -> {
    let x = ();  // shadows the linear x; leaks it
    ()
  }
}
